--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="D:/Documents/Polytechnique/2A/INF421/rushhour/jmathplot.jar.zip"/>
-	<classpathentry kind="lib" path="D:/Documents/Polytechnique/2A/INF421/rushhour/jmathio.jar"/>
+	<classpathentry kind="lib" path="jmathio.jar"/>
+	<classpathentry kind="lib" path="jmathplot.jar.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
