--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="jmathio.jar"/>
 	<classpathentry kind="lib" path="jmathplot.jar.zip"/>
+	<classpathentry kind="lib" path="D:/Documents/Polytechnique/2A/INF421/rushhour/lib/jmathplot.jar.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
